--- a/org/2020-02-13-chocolatey.org
+++ b/org/2020-02-13-chocolatey.org
@@ -1,3 +1,10 @@
 #+TITLE: chocolatey
-#+STARUP: indent
+#+STARTUP: indent
 * command
+** install
+choco install [packageName]
+** uninstall
+choco uninstall [packageName]
+*** options
+**** -X
+remove dependency
