--- a/org/2020-02-29-git.org
+++ b/org/2020-02-29-git.org
@@ -109,9 +109,12 @@ git restore -- glob 将通配符匹配的工具区的文件回滚到与暂存区一致，旧版本不是rest
 git restore --staged glob 同上，但是是将暂存区回滚到与当前分支的最新提交
 * principle
 ** git对象
-*** 类型
-blob: 一个blob就是由一个文件转换而来，blob对象中只会存储文件的数据，而不会存储文件的元数据。 
-tree: 一个tree就是由一个目录转化而来，tree对象中只会存储一层目录的信息，它只存储它的直接文件和直接子目录的信息，但是子目录中的内容它并不会保存。
-commit: 一个commit就是一个我们所创建的提交，它指向了一个tree，这个tree保存了某一时刻项目根目录中的直接文件信息和直接目录信息，也就是说，这个tree会指向直接文件的blob对象，并且指向直接子目录的tree对象，子目录的tree对象又指向了子目录中直接文件的blob，以及子目录的直接子目录的tree，依此类推。
+*** type
+**** blob 
+一个blob就是由一个文件转换而来，blob对象中只会存储文件的数据，而不会存储文件的元数据。
+**** tree
+一个tree就是由一个目录转化而来，tree对象中只会存储一层目录的信息，它只存储它的直接文件和直接子目录的信息，但是子目录中的内容它并不会保存。
+**** commit 
+一个commit就是一个我们所创建的提交，它指向了一个tree，这个tree保存了某一时刻项目根目录中的直接文件信息和直接目录信息，也就是说，这个tree会指向直接文件的blob对象，并且指向直接子目录的tree对象，子目录的tree对象又指向了子目录中直接文件的blob，以及子目录的直接子目录的tree，依此类推。
 *** 哈希码
 标识每个git对象
