--- a/org/2020-03-03-csrf.org
+++ b/org/2020-03-03-csrf.org
@@ -3,3 +3,6 @@
 用户访问siteA, 生成对应cookie
 恶意用户诱导用户访问siteB，打开页面的时候加载脚本，用js进行请求(比如转账到具体用户)
 xss主要是影响用户体验，整一些脏数据，让页面的显示出问题，csrf一般配合xss攻击用
+Eg:
+如打开银行转账，如果设计存在缺陷，使用get进行转账
+不小心打开恶意网站B，该网站知道了银行的设计缺陷，整个通用的转账链接，主要被打开窗口，请求就会发送，cookie自动带
