--- a/org/2019-10-19-idea.org
+++ b/org/2019-10-19-idea.org
@@ -2,9 +2,16 @@
 #+STARTUP: indent
 * idea相关配置
 在开发Spring Boot相关项目时候，设置启动脚本为On frame deactivation时更新update classes and resources 配置devTools可以实现热重载
-* gradle
-输出时乱码
-help->edit custom vm options->restart
 * 快捷键
 C-Q 查看类、方法、属性注释
 C-P 查看方法参
+* trick
+** 乱码
+1. File encodings===utf=8
+2. help -> custom vm options === -Dfile.encoding=UTF-8
+*** gradle 
+compileJava.options.encoding = 'UTF-8'
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
